--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,22 +6,21 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
+      # Specify the version you desire here
       - image: circleci/php:7.2
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      - image: circleci/mysql:latest
-
-    working_directory: ~/repo
 
     steps:
       - checkout
 
+      - run: sudo apt update && sudo apt install zlib1g-dev libsqlite3-dev
+      - run: sudo docker-php-ext-install zip
+
       # Download and cache dependencies
+
+      # composer cache
       - restore_cache:
           keys:
+          # "composer.lock" can be used if it is committed to the repo
           - v1-dependencies-{{ checksum "composer.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
@@ -29,9 +28,26 @@ jobs:
       - run: composer install -n --prefer-dist
 
       - save_cache:
+          key: composer-v1-{{ checksum "composer.lock" }}
           paths:
-            - ./vendor
-          key: v1-dependencies-{{ checksum "composer.json" }}
+            - vendor
 
-      # run tests!
+      # node cache
+
+      - restore_cache:
+          keys:
+            - node-v3-{{ checksum "package.json" }}
+            - node-v3-
+      - run: yarn install
+      - save_cache:
+          key: node-v3-{{ checksum "package.json" }}
+          paths:
+            - node_modules
+            - ~/.yarn
+
+      # prepare the database
+      - run: touch storage/testing.sqlite
+      - run: php artisan migrate --env=testing --database=sqlite_testing --force
+
+      # run tests with phpunit or codecept
       - run: ./vendor/bin/phpunit
