--- a/.env.testing
+++ b/.env.testing
@@ -2,3 +2,6 @@ APP_ENV=testing
 APP_DEBUG=true
 APP_KEY=27ceqUDGvdm77abRFSNQbFSVFIz4dGIH
 DB_DEFAULT=sqlite_testing
+
+DB_CONNECTION=sqlite
+DB_DATABASE=test.sqlite
