--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
-        "ramsey/uuid": "^3.7"
+        "league/tactician": "^1.0",
+        "madewithlove/tactician-laravel": "^1.0",
+        "ramsey/uuid": "^3.7",
+        "spatie/laravel-fractal": "^5.3"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -25,8 +29,9 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/",
-            "Domain\\": "domain/"
+            "Infrastructure\\": "infrastructure/",
+            "Domain\\": "domain/",
+            "Application\\": "application/"
         }
     },
     "autoload-dev": {
